--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Confounder &amp; Randomization Challenge</title>
+<title>Using Randomization &amp; Stratification to Overcome A Common Cause Confounder</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -96,8 +96,7 @@ window.Quarto = {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Confounder &amp; Randomization Challenge</h1>
-<p class="subtitle lead">Recovering Lost Figures: Visualizing Confounders and Causal Inference</p>
+<h1 class="title">Using Randomization &amp; Stratification to Overcome A Common Cause Confounder</h1>
 </div>
 
 
@@ -165,8 +164,8 @@ Important
 </div>
 </div>
 <p>Let’s use data to figure out which surgeon performs better. <a href="#fig-plot-outcomes" class="quarto-xref">Figure&nbsp;1</a> shows the post-surgical symptom score for 100 patients. Doc Duck’s average post-surgical symptom score is 3.38 while Doc Dreamy’s average is 2.8. Doc Dreamy performs better since lower scores indicate better outcomes. One might ask if the difference in average post-surgical symptom score is statistically significant. A two-sample t-test reveals a statistically significant difference (t = -2.317, p = 0.023).</p>
-<section id="recover-figure-1-post-surgical-outcomes-by-patient" class="level3">
-<h3 class="anchored" data-anchor-id="recover-figure-1-post-surgical-outcomes-by-patient">Recover Figure 1: Post-Surgical Outcomes by Patient</h3>
+<section id="recovered-figure-1-post-surgical-outcomes-by-patient" class="level3">
+<h3 class="anchored" data-anchor-id="recovered-figure-1-post-surgical-outcomes-by-patient">Recovered Figure 1: Post-Surgical Outcomes by Patient</h3>
 <div class="cell">
 <div class="cell-output cell-output-stderr">
 <pre><code>Warning: package 'ggplot2' was built under R version 4.4.3</code></pre>
@@ -275,8 +274,8 @@ Figure&nbsp;4: DAG Model Explaining Surgical Outcomes
 </div>
 <p><a href="#fig-plot-outcomes-randomized" class="quarto-xref">Figure&nbsp;5</a> shows the post-surgical symptom score for 100 patients under randomized assignment. Doc Duck’s average post-surgical symptom score is 2.71 while Doc Dreamy’s average is 3.46. Doc Duck performs better since lower scores indicate better outcomes. With randomization breaking the confounding relationship, we can now properly assess the causal effect. A two-sample t-test reveals a statistically significant difference (t = 2.734, p = 0.007). <strong>Not only is Dr.&nbsp;Dreamy not the better surgeon, he is actually the worse surgeon!</strong></p>
 </section>
-<section id="recover-figure-2-randomized-assignment-outcomes" class="level3">
-<h3 class="anchored" data-anchor-id="recover-figure-2-randomized-assignment-outcomes">Recover Figure 2: Randomized Assignment Outcomes</h3>
+<section id="recovered-figure-2-randomized-assignment-outcomes" class="level3">
+<h3 class="anchored" data-anchor-id="recovered-figure-2-randomized-assignment-outcomes">Recovered Figure 2: Randomized Assignment Outcomes</h3>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-plot-outcomes-randomized" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -296,8 +295,8 @@ Figure&nbsp;5: Post-Surgical Symptom Score (lower is better) for randomized pati
 <section id="solution-2-stratification-when-you-cant-randomize" class="level2">
 <h2 class="anchored" data-anchor-id="solution-2-stratification-when-you-cant-randomize">Solution 2: Stratification — When You Can’t Randomize</h2>
 <p>The key to handling a common cause confounder is to stratify by the common cause. In general, this means we examine the relationship between treatment and outcome within groups that share the same value of the confounder. In our example, this means we look at patients of similar severity and compare the outcomes of the surgeons for patients of similar severity. There are mathematically sophisticated ways to do this, but here we demonstrate it visually. Since patient number lacks inherent meaning, the following figure shows patient severity on the x-axis and post-surgical symptom score on the y-axis.</p>
-<section id="recover-figure-3-outcomes-by-patient-severity-stratification" class="level3">
-<h3 class="anchored" data-anchor-id="recover-figure-3-outcomes-by-patient-severity-stratification">Recover Figure 3: Outcomes by Patient Severity (Stratification)</h3>
+<section id="recovered-figure-3-outcomes-by-patient-severity-stratification" class="level3">
+<h3 class="anchored" data-anchor-id="recovered-figure-3-outcomes-by-patient-severity-stratification">Recovered Figure 3: Outcomes by Patient Severity (Stratification)</h3>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-plot-outcomes-severity" class="quarto-float quarto-figure quarto-figure-center anchored">
